Application/k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loglens-frontend
  namespace: loglens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loglens-frontend
  template:
    metadata:
      labels:
        app: loglens-frontend
    spec:
      containers:
        - name: frontend
          image: 432995435807.dkr.ecr.ap-south-1.amazonaws.com/cu-final/frontend:latest
          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true

          readinessProbe:
            httpGet:
              path: /frontend-healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /frontend-healthz
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: nginx-config
          configMap:
            name: loglens-frontend-nginx-config
            items:
              - key: default.conf
                path: default.conf
