Application/k8s/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loglens-frontend
  namespace: loglens
spec:
  type: ClusterIP
  selector:
    app: loglens-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
