Application/k8s/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loglens-frontend-ingress
  namespace: loglens
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/load-balancer-name: shared-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.fixed-response: '{"Type":"fixed-response","FixedResponseConfig":{"MessageBody":"Backend service does not exist","StatusCode":"503","ContentType":"text/plain"}}'
spec:
  ingressClassName: alb
  rules:
    - host: loglens.dealshare.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: loglens-backend
                port:
                  number: 80
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: loglens-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loglens-frontend
                port:
                  number: 80
